welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:6: error: type mismatch;
 found   : Unit
 required: Boolean
if (getCouleurSol() == Color.green) {
                                    ^SlugTracking:10: error: type mismatch;
 found   : Unit
 required: Boolean
	recule()
              ^